--- a/css/style.css
+++ b/css/style.css
@@ -14,21 +14,17 @@ body {
 
 /* 导航栏样式 */
 .nav-bar {
-    background-color: #2c3e50;
+    background-color: #2c5047;
     color: white;
-    padding: 1rem 0;
+    padding: 0.1rem 0;
 }
 
 .nav-container {
     width: 90%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-}
-
-.blog-title {
-    font-size: 1.8rem;
 }
 
 .nav-menu {
@@ -43,7 +39,7 @@ body {
 .nav-menu a {
     color: white;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.0rem;
 }
 
 .nav-menu a:hover {
@@ -55,12 +51,6 @@ body {
     width: 90%;
     max-width: 1200px;
     margin: 2rem auto;
-}
-
-/* 博主信息样式 */
-.author-info {
-    text-align: center;
-    margin-bottom: 3rem;
 }
 
 .avatar {
@@ -82,17 +72,12 @@ body {
     padding: 2rem;
     margin-bottom: 2rem;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.article-title a {
-    color: #2c3e50;
-    text-decoration: none;
+.article-title {
+    color: #516a83;
     font-size: 1.5rem;
-}
-
-.article-title a:hover {
-    color: #3498db;
 }
 
 .article-desc {
@@ -101,16 +86,18 @@ body {
 }
 
 /* 关于样式 */
-.about-section, .contact-section {
+.about-section,
+.contact-section {
     width: 70%;
     margin: 3rem auto;
     background-color: white;
     padding: 2rem;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.about-section h2, .contact-section h2 {
+.about-section h2,
+.contact-section h2 {
     color: #2c3e50;
     margin-bottom: 1rem;
     border-bottom: 2px solid #3498db;
@@ -124,7 +111,7 @@ body {
     background-color: white;
     padding: 3rem;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .article-meta {
@@ -145,7 +132,11 @@ body {
 }
 
 .memb_avt {
-    width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 2px solid #3498db;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #3498db;
 }
 
 .back-home {
@@ -162,4 +153,9 @@ body {
     background-color: #2980b9;
 }
 
-
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 16px;
+        /* 移动端基础清晰字体大小（主流适配尺寸） */
+    }
+}
