--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: "宋体", "SimSun", "黑体", "SimHei", Arial, sans-serif;
+    box-sizing: border-box;
 }
 
 /* 页面主体样式 */
